--- a/css/style.css
+++ b/css/style.css
@@ -6,4 +6,140 @@
     list-style: none;
     list-style-type: none;
     text-decoration: none;
+    font-weight: 480;
+    color: #5d5d7d;
 }
+
+.wrapper{
+    height: 100vh;
+    width: 100vw;
+}
+
+.container-left{
+ display: inline-block;
+ width: 60%;
+ margin-top: 20%;
+ padding-left: 136px;
+}
+
+.container-right{
+ display: inline-block;
+ background-color: rgba(93, 93, 125, 0.16);
+ height: 100vh;
+ width: 40%;
+ position: absolute;
+}
+
+img{
+    position: relative;
+    top: 5%;
+    right: 130px;
+}
+
+h1{  
+    width: 368px;
+    font-size: 70px;
+    line-height: 88px;
+}
+
+p{
+    width: 540px;
+    font-size: 28px;
+    line-height: 48px;
+    opacity: 0.6;
+    margin: 15px 0px;
+}
+
+button{
+    width: 269px;
+    height: 62px;
+    background-color: #9499EA;
+    box-shadow: 0px 10px 24px rgba(148, 153, 234, 0.0979959);
+    border-radius: 30px;
+    border: none;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: center;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+button:hover{
+    opacity: .8;
+}
+
+button:active{
+    opacity: 0.5;
+}
+
+a{
+    font-size: 28px;
+    line-height: 41px;
+    color: #5d5d7d;
+    margin-right: 40px;
+    cursor: pointer;
+}
+
+a:nth-child(2){
+    opacity: 0.4;
+}
+
+a:hover{
+    opacity: 0.4;
+}
+
+a:active{
+    opacity: 0.8;
+}
+
+header{
+    margin: 24px 0px 0px 57px;
+}
+
+@media (min-width: 390px) and (max-width: 844px){
+    .container-left{
+        width: 100%;
+        height: 50%;
+        padding: 0px;
+        margin: 0;
+    }
+    .container-right{
+        display: block;
+        height: auto;
+        width: 100%;
+        position: static;
+        padding-right: 40px;
+    }
+    img{
+        position: static;
+        max-width: 90%;
+    }
+    header{
+        display: none;
+    }
+    h1{
+        font-size: 36px;
+        line-height: 52px;
+        width: auto;
+        margin: 58px 58px 0px 58px;
+        text-align: center;
+    }
+
+    p{
+        width: auto;
+        margin: 15px 40px;
+        text-align: center;
+        font-size: 14px;
+        line-height: 24px;
+    }
+
+    button{
+        display: block;
+        margin: 0 auto;
+    }
+
+    img{
+        width: 90%;
+    }
+}
+
